- Added a User Profile screen which allows the user to edit his public SSH keys - Updated user model to protect crowd feilds from being updated by a controller - Updated user model so that the cached groups field is serialized by rails - Fixed header layout so that the forge logo is not floating this fixes layout issues   with subsequent elements to the header since it now actually takes up space.
git-svn-id: http://fusesource.com/forge/svn/fuseforge/rails/trunk@526 0e3fd41d-d72c-43e8-bc88-e5fa02bd3159

--- a/public/stylesheets/site.css
+++ b/public/stylesheets/site.css
@@ -20,7 +20,7 @@ a {text-decoration: none;}
 a:hover { color: red; text-decoration: underline;}
 img {border: none;}
 
-.wrapper { min-width: 762px; width: 762px; margin: 0 auto; }
+.wrapper { min-width: 762px; width: 762px; margin: 0 auto; clear:both; }
 #section { width: 100%; float: left; }
 
 /* ==================================================================== *
@@ -30,7 +30,7 @@ img {border: none;}
 #header .wrapper {width: 920px; padding: 0 20px;}
 #header { font-family: Verdana,sans-serif; font-size:0.75em; }
 #header {color: white; float: left; background: #00509e url(../images/banner_curve.png) no-repeat center top;}
-#header img {padding: 25px 0 25px 0; float: left;}
+#header img {padding: 25px 0 25px 0;}
 
 #header ul {float: right; margin: 25px 0px 0px 0px;}
 #header a {color: #8bb7e2;}
@@ -347,6 +347,10 @@ table.project-list td.description {
 }
 #content table.fieldset .error-with-field small {
   color: red;
+}
+
+#content table.fieldset .ssh_key textarea {
+  font-size: 8pt;
 }
 
 /* ==================================================================== *
